Create templates for notion_cat, choice notions for category, settings url links

--- a/django_project/site_for_notes/templates/base.html
+++ b/django_project/site_for_notes/templates/base.html
@@ -23,7 +23,7 @@
           <div class="col">
         <div class="navbar-icon">
           <a class="icon-navbar-starts" data-toggle="tooltip" data-placement="bottom" title="To-Do List" href="" ><img class="icon-item" src = "{% static 'site_for_notes_apllication/img/check2-circle.svg' %}" ></a>
-          <a data-toggle="tooltip" data-placement="bottom" title="Notion" href="{% url 'notion' %}"><img class="icon-item" src = "{% static 'site_for_notes_apllication/img/journal-bookmark.svg' %}" ></a>
+          <a data-toggle="tooltip" data-placement="bottom" title="Notion" href="{% url 'index_notion' %}"><img class="icon-item" src = "{% static 'site_for_notes_apllication/img/journal-bookmark.svg' %}" ></a>
           <a data-toggle="tooltip" data-placement="bottom" title="Target" href="#"><img  class="icon-item" src = "{% static 'site_for_notes_apllication/img/bullseye.svg' %}"></a>
         </div>
           </div>
