--- a/django_project/site_for_notes/notion/static/notion/css/notion_index.css
+++ b/django_project/site_for_notes/notion/static/notion/css/notion_index.css
@@ -7,6 +7,19 @@
     margin-top: 40px;
 }
 
+.page_add_notion .add_notion_button{
+          margin-top: 30px;
+          font-weight: 500;
+          font-size: 20px;
+          font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+          padding: 5px;
+          border-radius: 10px;
+          border: 2px solid black;
+          width: 150px;
+}
+
+
+
 .notion_cards{
     display: flex;
     justify-content: center;
@@ -45,5 +58,45 @@
     margin-top: -10px;
     height: 120px;
 
+}
+
+/* from add page */
+
+.from_add_notion{
+     margin-top: 40px;
+     border-radius: 10px;
+     border: 2px solid black;
+     width: 500px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     margin-left: auto;
+     margin-right: auto;
+}
+
+.element_form{
+    margin-top: 20px;
+
+}
+
+.element_form .form_label_add{
+    font-weight: 700;
+    font-size: 20px;
+    font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    line-height: 1.2;
+    margin-right: 10px;
+
+}
+
+.from_add_notion button{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    font-size: 20px;
+    font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    padding: 5px;
+    border-radius: 10px;
+    border: 2px solid black;
+    width: 150px;
 
 }
